<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="action_settings">Settings</string>



    <string name="title_activity_contact_details">ContactDetails</string>
    <string name="title_activity_edit_contact">EditContact</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_contact">NewContact</string>
    
    <string name="contact_image">Contact_Image</string>
    <string name="mobile_field">Mobile: </string>
    <string name="work_field">Work: </string>
    <string name="email_field">Email: </string>
    <string name="address_field">Address: </string>
    <string name="home_field">Home: </string>
    <string name="dob_field">DOB: </string>
    <string name="reset_image">Reset Image </string>
    
    <string name="search">Search </string>
    <string name="default_image">Default Image </string>
    
    <string name="first_label">First name </string>
    <string name="last_label">Last name </string>
    <string name="mobile_label">Mobile </string>
    <string name="work_label">Work </string>
    <string name="email_label">Email </string>
    <string name="address_label">Address </string>
    <string name="home_label">Home </string>
    <string name="dob_label">DOB </string>
    
  	 <string name="first_ghost">Enter name </string>
    <string name="last_ghost">Enter name </string>
    <string name="mobile_ghost">Enter mobile </string>
    <string name="work_ghost">Enter work </string>
    <string name="email_ghost">Enter email </string>
    <string name="address_ghost">Enter address </string>
    <string name="home_ghost">Enter home </string>
    <string name="dob_ghost">Enter DOB </string>

    
    

</resources>